# MentalFX

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md
Mathematica/: mental_mathematica.cc  mental_mathematica.h
MentalFX/: mental_fx.cc
MentalFX/math/: math.hpp
MentalFX/math/cuda_math/: cuda_math.cpp
MentalFX/math/metal_math/: metal_math.mm
MentalFX/math/simple_math/: simple_math.cpp
MentalFX/video/: video.hpp
MentalFX/video/mvk_renderer/: mvk_renderer.cpp
MentalFX/video/ogl_renderer/: ogl_renderer.cpp
MentalFramework/: mental_framework.cc  mental_framework.h  mental_glfw_window.cc  mental_glfw_window.h  mental_vk_renderer.h
